syntax = "proto3";

package creation.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/creation";

import "common/api_response.proto";
import "common/access_token.proto";
import "creation/messages/creation.proto";
import "creation/messages/creation_status.proto";

// 视频详细页
message GetCreationRequest {
  int64 creation_id = 1;
}

message GetCreationPrivateRequest {
  int64 creation_id = 1;
  common.AccessToken access_token = 2;
}

message GetCreationResponse {
  creation.messages.CreationInfo creation_info = 1;
  common.ApiResponse msg = 2;
}

enum ByCount {
  PUBLISHED_TIME = 0;
  VIEWS = 1;
  LIKES = 2;
  COLLECTIONS = 3;
}

// 视频管理
message GetUserCreationsRequest {
  creation.messages.CreationStatus status = 1;
  int64 user_id = 2;
  int32 page = 3;
  common.AccessToken access_token = 4;
}

// 空间
message GetSpaceCreationsRequest {
  int64 user_id = 1;
  int32 page = 2;
  ByCount by_what = 3;
}

// 发布状态的Creation列表
message GetCreationListRequest {
  repeated int64 ids = 1;
}

message GetCreationListResponse {
  common.ApiResponse msg = 1;
  repeated creation.messages.CreationInfo creation_info_group = 2;
  int32 count = 3;
}

message SearchCreationRequest {
  string title = 1;
  int32 page = 2;
}
